--- a/frontend/EchoBot.html
+++ b/frontend/EchoBot.html
@@ -3,12 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>EchoBot</title>
+    <a href="Echo.js"></a>
     <p>EchoBot</p>
 </head>
 <body>
 <div class="container">
     <div class="history">
         <h2>History</h2>
+        <table>
+
+        </table>
         <p class="me">History</p>
         <p class="bot">History</p>
         <p class="me">History</p>
@@ -21,12 +25,17 @@
     </div>
     <div class="message">
         <input type="text" placeholder="Write Something!">
-        <input type="button">
+        <input type="button" value="send">
     </div>
 
 </div>
 </body>
 </html>
+
+<script>
+
+</script>
+
 <style>
     h1{
         text-align: center;
