--- a/frontend/EchoBot.html
+++ b/frontend/EchoBot.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="container">
-    <h1>History</h1>
+    <h1>Echo Bot</h1>
     <div class="history">
         <table id ="history">
 
@@ -60,7 +60,7 @@
         border: 3px solid rebeccapurple;
         padding: 10px;
         border-radius: 41px;
-
+        background-color: rgb(217, 192, 222,0.3) ;
     }
     .message {
         padding: 10px;
@@ -110,7 +110,7 @@
         width: 40%;
         padding-bottom: 10px;
         padding-top: 10px;
-        padding-right: 10px;
+        padding-left: 10px;
         border-radius: 5px;
         overflow: scroll;
         border: 0.5px solid;
